# gwtransport

./: .gitattributes  .gitignore  .lycheeignore  API_ANALYSIS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  FRONT_TRACKING_REBUILD_PLAN.md  MEMORY.md  README-front-tracking.md  README.md  STREAMLINING_RECOMMENDATIONS copy.md  STREAMLINING_RECOMMENDATIONS.md  basedpyright_errors.txt  basedpyright_errors_after.txt  pyproject.toml  ruff.toml  ruff_defaults.toml  ty_errors.txt
.claire/worktrees/agent-aaa156dadf2ffc157/.claude/agent-memory-local/gwtransport-reviewer/: feedback_tikhonov_gram_terminology.md
.claude/: code_review_2026-03-01.md
.claude/agents/: gwtransport-reviewer.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: gwtransport-reviewer.agent.md
.github/workflows/: cla.yml  docs.yml  examples_testing.yml  functional_testing.yml  linting.yml  pre-commit-check.yml  release.yml  typing.yml
docs/: CROSS_REFERENCES.md  implement_owen_t_radial.md  radial_erf_research_prompt.md  requirements.txt  stable_jk_series_prompt.md
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/_static/css/: try-examples.css
docs/source/_static/js/: pyodide-prewarm.js
docs/source/api/: modules.rst
docs/source/examples/: 07_Radial_PushPull_Well.nblink  08_bank_filtration_timflow.nblink  09_Front_Tracking_Rarefaction_Waves.nblink  11_Percolation_Unsaturated_Zone.nblink  12_Bank_Filtration_Rainwater_Fraction.nblink  13_Aquifer_Storage_Recovery.nblink  14_Parameter_Uncertainty_Confidence_Bands.nblink
docs/source/user_guide/: assumptions.rst  concepts.rst  index.rst  modules.rst  radial_kernel_derivation.rst  theory.rst  workflows.rst
docs/theory/: front_tracking_interactions.md
examples/: 01_Aquifer_Characterization_Temperature.ipynb  01_Estimate_aquifer_pore_volume_from_temperature_response.py  02_Estimate_the_residence_time_distribution.py  02_Residence_Time_Analysis.ipynb  03_Log_removal.py  03_Pathogen_Removal_Bank_Filtration.ipynb  04_Deposition_Analysis_Bank_Filtration.ipynb  05_Diffusion_Dispersion.ipynb  05_Testing_Assumptions.ipynb  06_Freundlich_Sorption_Nonlinear_Transport.ipynb  06_Stromingen_artikel_des_tombe_2026.ipynb  06_test.py  07_Radial_PushPull_Well.ipynb  08_Front_Tracking_Exact_Solution.ipynb  08_bank_filtration_timflow.ipynb  09_Front_Tracking_Rarefaction_Waves.ipynb  10_Advection_with_non_linear_sorption.ipynb  11_Percolation_Unsaturated_Zone.ipynb  12_Bank_Filtration_Rainwater_Fraction.ipynb  13_Aquifer_Storage_Recovery.ipynb  14_Parameter_Uncertainty_Confidence_Bands.ipynb  adaptive_kde_example.py  deposition_computation.py  diffusion_estimation.py  example_coverage.py  example_data_generation.py  plot.py  residence_time_estimation.py  test.py  test_readme.py
src/gwtransport/: _diffusion_shared.py  _radial_asr_compose.py  _radial_asr_dehoog.py  _radial_asr_drift_kernels.py  _radial_asr_gridfree.py  _radial_asr_kernels.py  _radial_asr_reuse.py  _radial_compose.py  _radial_dehoog.py  _radial_fv.py  _radial_gridfree.py  _radial_kernels.py  _time.py  _validation.py  advection.py  advection_utils.py  arrival.py  deposition.py  deposition2.py  deposition_utils.py  diffusion.py  diffusion2.py  diffusion_fast.py  diffusion_fast_fast.py  examples.py  front_tracking_events.py  front_tracking_handlers.py  front_tracking_math.py  front_tracking_output.py  front_tracking_solver.py  front_tracking_waves.py  gamma.py  logremoval.py  percolation.py  radial.py  radial3.py  radial3_utils.py  radial_ade.py  radial_asr.py  radial_utils.py  (+6 more)
src/gwtransport/fronttracking/: FRONT_TRACKING_REBUILD_PLAN.md  KNOWLEDGE_BASE.md  KNOWLEDGE_BASE_PROMPT.md  README-front-tracking.md  events.py  handlers.py  interactions.py  math.py  output.py  plot.py  solver.py  test_front_tracking_rarefaction_rarefaction_plan.md  validation.py  waves.py
src/gwtransport1d/: __init__.py  advection.py  deposition.py  diffusion.py  diffusion2.py  gamma.py  logremoval.py  residence_time.py  residence_time_estimation.py  utils.py
tests/: conftest.py  find_minimum_dependencies.py  test_advection.py  test_advection_diffusion.py  test_coverage.py  test_deposition.py  test_diffusion.py  test_diffusion2.py  test_examples.py  test_gamma.py  test_residence_time.py  test_residence_time2.py  test_utils.py
tests/docs/: __init__.py  code_snippets.py  test_module_capability_matrix.py
tests/examples/: test_examples.py
tests/notebooks/: failing_notebook.ipynb
tests/regression/: __init__.py  generate_baselines.py  scenarios.py  test_baselines.py  test_concentration_at_point_parity.py  test_phase1_invariants.py
tests/regression/baselines/: canonical_pulse_n2.pkl  constant_retardation_pulse.pkl  freundlich_nhalf_pulse.pkl  langmuir_pulse.pkl  step_change_flow_n2.pkl  zero_flow_bins_n2.pkl
tests/src/: _fv_oracle.py  _oracles.py  _radial_asr_drift_fv_oracle.py  _radial_asr_drift_kernels_check.py  _radial_asr_fv_oracle.py  _radial_asr_gridfree_oracle.py  _radial_asr_whittaker_oracle.py  _radial_fv_oracle.py  conftest.py  test_advection.py  test_advection_api_phase7.py  test_advection_nonlinear_analytical.py  test_advection_nonlinear_exact_analytical.py  test_advection_roundtrip.py  test_arrival.py  test_deposition.py  test_deposition2.py  test_deposition_utils.py  test_diffusion.py  test_diffusion2.py  test_diffusion_fast.py  test_diffusion_fast_fast.py  test_examples.py  test_fraction_explained.py  test_fraction_explained_full.py  test_fraction_explained_gamma.py  test_fraction_explained_mean.py  test_freundlich_retardation.py  test_front_tracking_api.py  test_front_tracking_comparison.py  test_front_tracking_drained_fan_collision.py  test_front_tracking_events.py  test_front_tracking_example1_plateau.py  test_front_tracking_flow_changes.py  test_front_tracking_handlers.py  test_front_tracking_interactions.py  test_front_tracking_math.py  test_front_tracking_output.py  test_front_tracking_phase8.py  test_front_tracking_plateau_behavior.py  (+28 more)
