[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gwtransport"
dynamic = ["version"]
description = "Timeseries analysis for groundwater transport of solutes and heat"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
  "analysis",
  "aquifer",
  "bank-filtration",
  "contaminant",
  "groundwater",
  "hydrology",
  "pathogen-removal",
  "residence-time",
  "temperature",
  "time-series",
  "transport",
  "water-treatment",
]
authors = [
  { name = "Bas des Tombe"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "ipykernel>=4.0.1",
  "matplotlib>=3.8.4",
  "mpmath>=1.3.0",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "requests>=2.19.0",
  "scipy>=1.13.0",
]
[project.optional-dependencies]
test = [
  "nbconvert>=7.1.0",
  "nbformat>=5.0.2",
  "pytest>=6.2.5",
  "pytest-cov>=2.3.1",
  "pytest-xdist>=3.0.0",
  "python-flint>=0.8.0",
  "ruff==0.15.6",
  "timflow>=0.3",
  # numba arrives transitively via timflow; floor it at the first release with
  # cp314 wheels so resolution can't backtrack to a pre-3.10 numba (which would
  # otherwise win because its numpy bound is open and accepts numpy>=2.5).
  "numba>=0.63",
  "ty",
  "validate-pyproject[all,store]",
]
docs = [
  # Do NOT add the "jupyter" metapackage (or "notebook"/"jupyterlab") here. The docs
  # build does not need the JupyterLab/Notebook apps: nbsphinx renders with
  # nbsphinx_execute="never", and the in-browser examples use the JupyterLite app
  # bundled by jupyterlite-core. The hazard: "jupyter lite build" federates EVERY
  # labextension present in the env, so an externally-installed lab-extension built
  # against a different JupyterLab than the JupyterLite app (jupyterlite-core and
  # jupyterlite-pyodide-kernel ship as a version-matched pair providing one JupyterLab
  # base) can request a shared @jupyterlab/* singleton the app cannot satisfy, breaking
  # the interactive examples with a module-federation error (RUNTIME-012, "getter for
  # the shared module is not a function"). That is exactly what "jupyter" caused: it
  # pulls in notebook, whose @jupyter-notebook/lab-extension targets a newer JupyterLab
  # than the bundled app. Keeping these apps out of the env avoids it.
  "jupyterlite-core>=0.6",
  "jupyterlite-pyodide-kernel>=0.6",
  "jupyterlite-sphinx>=0.22",
  # conf.py imports nbformat directly (reads/writes the Pyodide notebook copies). It is
  # otherwise present only transitively via nbsphinx; declare it so the direct import does
  # not rest on a transitive dependency.
  "nbformat>=5.0.2",
  "nbsphinx",
  "nbsphinx-link",
  "sphinx>=9.0,<10.0",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1.2.0",
  "sphinx-copybutton",
  "sphinxext-opengraph[social_cards]",
]

[project.urls]
Homepage = "https://github.com/gwtransport/gwtransport"
Documentation = "https://gwtransport.github.io/gwtransport/"
Sponsor = "https://www.savethechildren.net/what-we-do/emergencies/war-gaza-escalations-west-bank"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# TestPyPI/PyPI reject local version identifiers (+gsha), and release.yml uploads
# untagged builds to TestPyPI; without this every such upload would error instead
# of versioning as 0.36.1.devN.
local_scheme = "no-local-version"

[tool.uv]
# Overriding cache-keys replaces uv's default (pyproject.toml only), so list it
# explicitly. The git key makes uv re-derive the hatch-vcs version when the commit
# or tags change; otherwise editable installs keep serving a stale cached version.
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-n=auto",
    "--doctest-modules",
]
markers = [
    "slow: marks tests that are slow (D_m>0 Riccati / FV-oracle cross-checks); run by default, deselect with -m 'not slow'",
]
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
# pytest.skip's @_with_exception decorator confuses ty's signature analysis
too-many-positional-arguments = "ignore"
# **kwargs / **params dict unpacking with mixed-type values in parameterized tests
invalid-argument-type = "ignore"
# Tests intentionally call functions with wrong/missing args to verify error handling
missing-argument = "ignore"
# builtins monkey-patching in conftest.py
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["tests/notebooks/**/*.ipynb"]

[tool.ty.overrides.rules]
# Intentionally broken notebook for testing error handling
unresolved-reference = "ignore"

[[tool.ty.overrides]]
include = ["docs/source/conf.py"]

[tool.ty.overrides.rules]
# conf.py imports docs-only packages (e.g. jupyterlite_pyodide_kernel); the linting
# env installs only --extra test, so they don't resolve here.
unresolved-import = "ignore"

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
